@@ -1,8 +1,8 @@
 package unrefined.internal.bitmap;
 
-import unrefined.desktop.BitmapImageFactory;
+import unrefined.desktop.BitmapSupport;
 import unrefined.desktop.IIOBitmapHandler;
-import unrefined.internal.IOUtils;
+import unrefined.math.FastMath;
 import unrefined.media.graphics.Bitmap;
 import unrefined.runtime.DesktopBitmap;
 
@@ -16,6 +16,9 @@ import javax.imageio.stream.ImageOutputStream;
 import java.awt.image.BufferedImage;
 import java.io.EOFException;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Locale;
 import java.util.Set;
@@ -24,8 +27,8 @@ public class JPEGBitmapHandler extends IIOBitmapHandler {
 
     public static final JPEGBitmapHandler INSTANCE = new JPEGBitmapHandler();
 
-    private static final Set<String> READER_FORMAT_NAMES = Set.of( "jpg", "jpeg" );
-    private static final Set<String> WRITER_FORMAT_NAMES = Set.of( "jpg", "jpeg" );
+    private static final Set<String> READER_FORMAT_NAMES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList( "jpg", "jpeg" )));
+    private static final Set<String> WRITER_FORMAT_NAMES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList( "jpg", "jpeg" )));
 
     private static final int JPEG_SOI = 0xD8;
     private static boolean isJPEG(ImageInputStream input) throws IOException {
@@ -73,11 +76,15 @@ public class JPEGBitmapHandler extends IIOBitmapHandler {
         if (reader == null) return null;
         reader.setInput(input, false, true);
         try {
-            return new DesktopBitmap(BitmapImageFactory.getImage(reader.read(0), type, true));
+            return new DesktopBitmap(BitmapSupport.getImage(reader.read(0), type, true));
         }
         finally {
             reader.dispose();
-            IOUtils.closeQuietly(input);
+            try {
+                input.close();
+            }
+            catch (IOException ignored) {
+            }
         }
     }
 
@@ -91,14 +98,18 @@ public class JPEGBitmapHandler extends IIOBitmapHandler {
         if (param.canWriteCompressed()) {
             param.setCompressionMode(ImageWriteParam.MODE_EXPLICIT);
             param.setCompressionType("JPEG");
-            param.setCompressionQuality(Math.clamp(quality, 0, 1));
+            param.setCompressionQuality(FastMath.clamp(quality, 0, 1));
         }
         BufferedImage raw = ((DesktopBitmap) bitmap).getBufferedImage();
-        BufferedImage image = switch (bitmap.getType()) {
-            case Bitmap.Type.ALPHA_8, Bitmap.Type.RGBA_4444, Bitmap.Type.RGBA_8888 ->
-                    BitmapImageFactory.getBufferedImage(raw, BufferedImage.TYPE_3BYTE_BGR, false);
-            default -> raw;
-        };
+        BufferedImage image;
+        switch (bitmap.getType()) {
+            case Bitmap.Type.ALPHA_8:
+            case Bitmap.Type.RGBA_4444:
+            case Bitmap.Type.RGBA_8888:
+                image = BitmapSupport.getBufferedImage(raw, BufferedImage.TYPE_3BYTE_BGR, false);
+                break;
+            default: image = raw;
+        }
         try {
             writer.write(null, new IIOImage(image, null, null), param);
         }
