@@ -1,8 +1,8 @@
 package unrefined.internal.bitmap;
 
-import unrefined.desktop.BitmapImageFactory;
+import unrefined.desktop.BitmapSupport;
 import unrefined.desktop.IIOBitmapHandler;
-import unrefined.internal.IOUtils;
+import unrefined.math.FastMath;
 import unrefined.media.graphics.Bitmap;
 import unrefined.runtime.DesktopBitmap;
 
@@ -16,6 +16,7 @@ import javax.imageio.stream.ImageOutputStream;
 import java.awt.image.BufferedImage;
 import java.io.EOFException;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.Locale;
 import java.util.Set;
@@ -24,8 +25,8 @@ public class PNGBitmapHandler extends IIOBitmapHandler {
 
     public static final PNGBitmapHandler INSTANCE = new PNGBitmapHandler();
 
-    private static final Set<String> READER_FORMAT_NAMES = Set.of( "png" );
-    private static final Set<String> WRITER_FORMAT_NAMES = Set.of( "png" );
+    private static final Set<String> READER_FORMAT_NAMES = Collections.singleton( "png" );
+    private static final Set<String> WRITER_FORMAT_NAMES = Collections.singleton( "png" );
 
     private static boolean isPNG(ImageInputStream input) throws IOException {
         byte[] b = new byte[8];
@@ -78,11 +79,15 @@ public class PNGBitmapHandler extends IIOBitmapHandler {
         if (reader == null) return null;
         reader.setInput(input, false, true);
         try {
-            return new DesktopBitmap(BitmapImageFactory.getImage(reader.read(0), type, true));
+            return new DesktopBitmap(BitmapSupport.getImage(reader.read(0), type, true));
         }
         finally {
             reader.dispose();
-            IOUtils.closeQuietly(input);
+            try {
+                input.close();
+            }
+            catch (IOException ignored) {
+            }
         }
     }
 
@@ -96,14 +101,19 @@ public class PNGBitmapHandler extends IIOBitmapHandler {
         if (param.canWriteCompressed()) {
             param.setCompressionMode(ImageWriteParam.MODE_EXPLICIT);
             param.setCompressionType("Deflate");
-            param.setCompressionQuality(Math.clamp(quality, 0, 1));
+            param.setCompressionQuality(FastMath.clamp(quality, 0, 1));
         }
         BufferedImage raw = ((DesktopBitmap) bitmap).getBufferedImage();
-        BufferedImage image = switch (bitmap.getType()) {
-            case Bitmap.Type.ALPHA_8, Bitmap.Type.RGBA_4444 ->
-                    BitmapImageFactory.getBufferedImage(raw, BufferedImage.TYPE_INT_ARGB, false);
-            default -> raw;
-        };
+        BufferedImage image;
+        switch (bitmap.getType()) {
+            case Bitmap.Type.ALPHA_8:
+            case Bitmap.Type.RGBA_4444:
+                image = BitmapSupport.getBufferedImage(raw, BufferedImage.TYPE_INT_ARGB, false);
+                break;
+            default:
+                image = raw;
+                break;
+        }
         try {
             writer.write(null, new IIOImage(image, null, null), param);
         }
